log/build_2024-07-31_04-40-51/walldetector/stderr.log
  File "/home/sami/session7/ros2-assignment7/install/walldetector/lib/python3.10/site-packages/walldetector/laptime_server.py", line 57
    self.right_distance < self.close_wall_threshold) 
                                                     ^
SyntaxError: expected ':'

